# Groundwater-Level-Trend-Analysis

./: .gitignore  README.md  pyproject.toml
Codes/: Graph Seperator.ipynb  Lat Long.ipynb  Slope Comparison Navigator.ipynb
Results/: Nebraska_sites.csv  South_Dakota_sites.csv
Results/10%_3MS_Colorado_Filtered/: Post_Agre_MK.xlsx  Post_Agri_LR.xlsx  Pre_Agre_results.xlsx  Pre_Agre_results_Q1.xlsx  analysis_summary.txt  slope_comparison.xlsx
Results/10%_3MS_Colorado_Unfiltered/: Post_Agre_MK.xlsx  Pre_Agre_results.xlsx  Pre_Agre_results_Q2.xlsx  Q1.csv  Q2.csv  Q3.csv  Slope_Comparison_with_Location.xlsx
Results/10%_3MS_Kansas_Filtered/: 3_Aggregated_data_Q1.csv  3_Aggregated_data_Q2.csv  3_Aggregated_data_Q3.csv  3_Aggregated_data_Q4.csv  3_aggregated_data.csv  Filtered_Q2.csv  Filtered_Q3.csv  Post_Agre_MK.xlsx  Q3.csv
Results/10%_3MS_Kansas_Unfiltered/: 3_Aggregated_data_Q2.csv  3_Aggregated_data_Q3.csv  Post_Agre_MK.xlsx  Pre_Agre_results_Q1.xlsx  Pre_Agre_results_Q2.xlsx  Pre_Agre_results_Q3.xlsx  Pre_Agre_results_Q4.xlsx  Q1.csv  Q4.csv  slope_comparison.xlsx
Results/10%_3MS_NAState_Filtered/: 3_Aggregated_data_Q1.csv  3_Aggregated_data_Q4.csv  3_aggregated_data.csv  Filtered_Q1.csv  Filtered_Q3.csv  Filtered_Q4.csv  Post_Agri_LR.xlsx  Pre_Agre_results.xlsx  Pre_Agre_results_Q1.xlsx  Pre_Agre_results_Q2.xlsx  (+1 more)
State Wise/: Colorado_sites.csv  Debuger.ipynb  Graph Seperator.ipynb  Kansas_sites.csv  NewMethod.ipynb  New_Mexico_sites.csv  Oklahoma_sites.csv  Untitled.ipynb
docs/: data_dictionary.md  reproducibility.md
tests/: test_analysis.py
(+452 files in other folders)
