[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groundwater-level-trend-analysis"
version = "0.1.0"
description = "Reproducible groundwater-level trend analysis tools for the High Plains Aquifer thesis workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "WhatsThisClint" }
]
dependencies = [
  "matplotlib>=3.10",
  "numpy>=2.4",
  "openpyxl>=3.1",
  "pandas>=3.0",
  "pymannkendall>=1.4.3",
  "scipy>=1.17",
]

[project.scripts]
groundwater-trends = "groundwater_trends.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
